--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="hero">
         <img src="profile.jpeg" alt="Shiva Photo" class="profile-img">
         <div class="hero-text">
-            <h1>Hi, I'm Shiva 👋</h1>
+            <h1>Hi, I'm ShivaRaj V 👋</h1>
             <p>BCA Student | Full-Stack Developer | Cloud Enthusiast</p>
             <button onclick="scrollToSection('contact')">Contact Me</button>
         </div>
@@ -28,8 +28,8 @@
 <section id="about">
     <h2>About Me</h2>
     <p>
-        I am a BCA student passionate about web development and cloud computing.
-        I enjoy building scalable web applications and deploying them on cloud platforms like AWS.
+        Motivated BCA student seeking an entry-level role as a Cloud Support Engineer or Front-End Developer
+        where I can apply my web development and cloud skills, gain hands-on experience, and contribute to organizational growth.
     </p>
 </section>
 
@@ -67,9 +67,9 @@
 
 <section id="contact">
     <h2>Contact</h2>
-    <p>Email: shiva@email.com</p>
-    <p>GitHub: github.com/shiva</p>
-    <p>LinkedIn: linkedin.com/in/shiva</p>
+    <p>Email : mr.shivaraj17@gmail.com </p>
+    <p>GitHub: https://github.com/shivaraj17-dev </p>
+    <p>LinkedIn: www.linkedin.com/in/shivaraj17 </p>
 </section>
 
 <footer>
@@ -78,4 +78,5 @@
 
 <script src="script.js"></script>
 </body>
+
 </html>
