Enhance contact section with links
Updated contact section with clickable GitHub and LinkedIn links.

--- a/index.html
+++ b/index.html
@@ -68,8 +68,19 @@
 <section id="contact">
     <h2>Contact</h2>
     <p>Email : mr.shivaraj17@gmail.com </p>
-    <p>GitHub: https://github.com/shivaraj17-dev </p>
-    <p>LinkedIn: www.linkedin.com/in/shivaraj17 </p>
+    <p>
+  GitHub: 
+  <a href="https://github.com/shivaraj17-dev" target="_blank">
+    github.com/shivaraj17-dev
+  </a>
+</p>
+
+<p>
+  LinkedIn: 
+  <a href=" www.linkedin.com/in/shivaraj17 " target="_blank">
+    View My LinkedIn Profile
+  </a>
+</p>
 </section>
 
 <footer>
@@ -80,3 +91,4 @@
 </body>
 
 </html>
+
