Fix contact links in index.html
Updated contact links to include proper URLs for GitHub and LinkedIn.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <p>
   LinkedIn: 
-  <a href=" www.linkedin.com/in/shivaraj17 " target="_blank">
+  <a href=" https://www.linkedin.com/in/shivaraj17/" target="_blank">
     View My LinkedIn Profile
   </a>
 </p>
@@ -92,5 +92,6 @@
 </body>
 
 </html>
+
 
 
